# pipelines

./: Dockerfile  docker-compose.yml  pipeline.py  pyproject.toml  requirements.txt  setup.py
.github/workflows/: main.yml
db/: Dockerfile
example_pipeline/: pipeline.py
pipelines/: database.py  load.py  tasks.py
test/: pipeline.py  task_test.py  test.py
