[tool.poetry]
name = "pipelines"
version = "0.1.0"
description = ""
authors = ["Leonid Shvechikov <shvechikov@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9.12"
click = "8.1.3"
psycopg2 = "^2.9.5"
python-dotenv = "^0.21.0"
pipeline = "^0.1.0"

#attrs = "^22.2.0"
#colorama = "^0.4.6"
#exceptiongroup = "^1.1.1"
#iniconfig = "^2.0.0"
#numpy = "^1.24.2"
#packaging = "^23.0"
#pandas = "^1.5.3"
#pip = "^23.0.1"
#pluggy = "^1.0.0"
#attrs = "^22.2.0"
#colorama = "^0.4.6"
#exceptiongroup = "^1.1.1"
#iniconfig = "^2.0.0"
#numpy = "^1.24.2"
#packaging = "^23.0"
#pandas = "^1.5.3"
#pip = "^23.0.1"
#pluggy = "^1.0.0"
#pytest = "^7.2.2"
#python-dateutil = "^2.8.2"
#pytz = "^2022.7.1"
#setuptools = "^67.3.3"
#six = "^1.16.0"
#tomli = "^2.0.1"
#wheel = "^0.38.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
pipelines = 'pipelines.cli:cli'